--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,133 @@
 
 @layer components {
   .btn {
-    @apply bg-pink-500 hover:bg-pink-700 inline-block my-2 px-4 py-2 uppercase rounded-md cursor-pointer font-bold text-white;
+    @apply hover:bg-gray-600 bg-gray-500 text-slate-50 inline-block my-2 px-20 py-3 uppercase cursor-pointer  hover:text-white tracking-widest text-sm transition-all;
+  }
+  .btninvert{
+    @apply hover:bg-slate-100 bg-slate-50 text-gray-500 inline-block my-2 px-20 py-3 uppercase cursor-pointer  hover:text-white tracking-widest text-sm transition-all;
+
+  }
+}
+/* Neutra fonts face */
+@font-face {
+  font-family: 'NeutraBold';
+  src: url('/fonts/Neutra2Text-Bold.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'NeutraDemi';
+  src: url('/fonts/Neutra2Text-Demi.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'NeutraLight';
+  src: url('/fonts/Neutra2Text-Light.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+.logoLink{
+
+}
+.logoLinkImg{
+}
+.homeCover h2{
+  color: #fff;
+}
+.homeCover img.object-cover{
+
+}
+.homeCover h2{
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.6);
+  font-weight: 700;
+  font-size: 2.8em;
+}
+.homeCover p{
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  font-weight: 300;
+  font-size: 0.9em;
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.6);
+  font-family: 'NeutraDemi';
+
+}
+h2, h3, h4{
+  font-weight: 700;
+}
+.navbar.scrolled .langSwitcher a{
+  color: #0f172a;
+  border: 0 transparent;
+  font-family: 'NeutraDemi';
+}
+.navbar .langSwitcher a{
+  color: #fff;
+  border: 0 transparent;
+  font-family: 'NeutraDemi';
+}
+.navbar.scrolled .langSwitcher span{
+  color: #0f172a;
+  font-family: 'NeutraDemi';
+}
+.navbar .langSwitcher span{
+  color: #fff;
+  font-family: 'NeutraDemi';
+}
+
+.navbar .main-menu .relative.group{
+  display: none;
+}
+
+.logoLinkImg{
+  filter: drop-shadow(1px 2px 1px rgba(0, 0, 0, 0.8));
+}
+
+/* Styles pour les écrans de taille moyenne et supérieure */
+@media (min-width: 768px) {
+  .navbar .container,
+  .navbar .langSwitcher {
+    justify-content: flex-start;
+
+  }
+  .homeCover{
+    justify-content: flex-end;
+    background: linear-gradient(to top right, rgb(17, 24, 39), transparent);
+
+  }
+  .homeCover h2 {
+    font-size: 2.8em;
+  }
+
+  
+}
+/* Vous pouvez ajouter d'autres styles spécifiques pour mobile ici */
+
+@media (max-width: 767px) {
+  .navbar .container,
+  .navbar .langSwitcher,
+  .navbar .ml-3  {
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 0.25em;
+  }
+  .navbar .langSwitcher,
+  .navbar .ml-3{
+    margin-top: 2.4em;
+    font-size: 0.85em;
+  }
+  .homeCover{
+    justify-content: center;
+    background: linear-gradient(to top right, rgba(17, 24, 39, 0.8), transparent);
+
+  }
+  .homeCover h2 {
+    font-size: 1.8em;
+  }
+  .navbar .logoLink{
+    margin-bottom: 0.65em;
   }
 }
